...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Plant1" translatesAutoresizingMaskIntoConstraints="NO" id="1Mm-m2-feW">
                                            <rect key="frame" x="57" y="0.0" width="295" height="227"/>
                                        </imageView>
...
                        <barButtonItem title="Item" image="person.circle" catalog="system" id="AHz-Ho-Z2A"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Hello" largeTitleDisplayMode="always" id="9U0-Jd-Hkt">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2j1-S7-z9O"/>
                    </navigationItem>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lv8-hT-nAR">
                                        <rect key="frame" x="54.5" y="301" width="163" height="30"/>
                                        <state key="normal" title="Add Photo of your plant">
                                            <color key="titleColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <rect key="frame" x="84.5" y="335" width="245" height="172"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="If4-a3-pjj">
                                        <rect key="frame" x="0.0" y="0.0" width="245" height="34"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gnL-Gb-kJe">
                                        <rect key="frame" x="0.0" y="42" width="245" height="34"/>
                                        <constraints>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FjE-lD-dAZ">
                                        <rect key="frame" x="0.0" y="84" width="245" height="34"/>
                                        <constraints>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KoB-lM-Hol">
                                        <rect key="frame" x="95.5" y="142" width="54" height="30"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                <segments>
                                    <segment title="Sign Up"/>
                                    <segment title="Sign In"/>
                                </segments>
                                <color key="selectedSegmentTintColor" red="0.42043802299999999" green="0.78039215689999997" blue="0.47752195809999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="337" y="424" width="26" height="22"/>
                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="eye" catalog="system">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
